--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "publifest-3d-r3f",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^9.56.10",
+    "@react-three/fiber": "^8.10.1",
+    "@react-three/postprocessing": "^2.7.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
