--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@react-three/fiber": "^8.10.1",
     "@react-three/postprocessing": "^2.7.0",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "three": "^0.148.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
