--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@react-three/drei": "^9.56.10",
     "@react-three/fiber": "^8.10.1",
     "@react-three/postprocessing": "^2.7.0",
+    "r3f-perf": "^7.1.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "three": "^0.148.0"
